bottom button bootstrap style change

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 
     <h3>Find the True Love of Your Dog's Life Today.</h3>
     <button type="button" class="btn btn-dark btn-lg down-btn"><i class="fab fa-apple"></i> Download</button>
-    <button type="button" class="btn btn-outline-light btn-lg down-btn"><i class="fab fa-google-play"></i> Download</button>
+    <button type="button" class="btn btn-light btn-lg down-btn"><i class="fab fa-google-play"></i> Download</button>
 
   </section>
 
