--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="">Contact</a>
+              <a class="nav-link" href="#cta">Contact</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="">Pricing</a>
+              <a class="nav-link" href="#pricing">Pricing</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="">Download</a>
@@ -138,7 +138,7 @@
 
   <!-- Pricing -->
 
-  <section class="pricing">
+  <section id="pricing">
 
 
     <h2>A Plan for Every Dog's Needs</h2>
@@ -198,7 +198,7 @@
 
   <!-- Call to Action -->
 
-  <section class="cta">
+  <section id="cta">
 
     <h3>Find the True Love of Your Dog's Life Today.</h3>
     <button type="button" class="btn btn-dark btn-lg down-btn"><i class="fab fa-apple"></i> Download</button>
